--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="hero-image-container" style="opacity: 0.6;">
                 <div class="hero-image-placeholder">
-                    <img src="Images/Hero image.jpg" alt="Astrology Hero Image" style="width:110%; height: 100%; display:block; opacity: 0.8;">
+                    <img src="Images/HeroImage.png" alt="Astrology Hero Image" style="width:110%; height: 100%; display:block; opacity: 0.8;">
                 </div>
             </div>
         </section>
@@ -206,10 +206,10 @@
                 <h3>CONTACT US</h3>
                 <div class="contact-details">
                     <p><strong>PHONE:</strong> 9999691464, 9582841454, 9210069061</p>
-                    <p><strong>ADDRESS:</strong> ASTROLOGY LIGHT FOR ALL, NEW DELHI</p>
-                    <p><strong>EMAIL:</strong> <a href="mailto:CONNECT@DIVINEASTROVIBES.COM">CONNECT@DIVINEASTROVIBES.COM</a></p>
-                    <p><strong>YOUTUBE:</strong> <a href="https://youtube.com/@DIVINEASTROVIBES" target="_blank">YOUTUBE.COM/@DIVINEASTROVIBES</a></p>
-                    <p><strong>FACEBOOK:</strong> <a href="https://facebook.com/DIVINEASTROVIBES" target="_blank">FACEBOOK.COM/DIVINEASTROVIBES</a></p>
+                    <p><strong>ADDRESS:</strong> Astrology light for all, Ground Floor, 10/17, Block 10, Subhash Nagar, New Delhi, Delhi, 110027</p>
+                    <p><strong>EMAIL:</strong> <a href="mailto:Astrologylightforall@gmail.com">Astrologylightforall@gmail.com</a></p>
+                    <p><strong>YOUTUBE:</strong> <a href="https://youtube.com/@manjulgmalhotra?si=fD2BR5AoLuQWwpao" target="_blank">YOUTUBE.COM/@MANJULGMALHOTRA</a></p>
+                    <p><strong>FACEBOOK:</strong> <a href="https://www.facebook.com/share/16gGSAMuK2/" target="_blank">FACEBOOK.COM/ASTROLOGYLIGHTFORALL</a></p>
                 </div>
             </div>
         </section>
