--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">Astrology light for All</div>
-      <ul class="nav-links">
+             <ul class="nav-links">
         <li><a href="#home" data-en="Home" data-hi="होम">Home</a></li>
         <li><a href="#services" data-en="Services" data-hi="सेवाएं">Services</a></li>
         <li><a href="#horoscope" data-en="Horoscope" data-hi="राशिफल">Horoscope</a></li>
@@ -275,7 +275,7 @@
         <li><a href="#about" data-en="About" data-hi="हमारे बारे में">About</a></li>
         <li><a href="#faq" data-en="FAQ" data-hi="सामान्य प्रश्न">FAQ</a></li>
         <li><a href="#contact" data-en="Contact" data-hi="संपर्क">Contact</a></li>
-      </ul>
+       </ul>
       <div class="language-switch">
         <button id="languageToggle" class="btn btn-primary">
           <i class="fas fa-globe"></i>
@@ -353,7 +353,7 @@
             And just like in medical reports, early awareness means faster healing.<br><br>
             Let us help you see the full picture of your life.<br><br>
             Because sometimes, all it takes is one small shift in understanding to change everything.</p>
-          </div>
+        </div>
         </div>
         <div class="feature-card fade-in">
           <i class="fas fa-gem feature-icon"></i>
@@ -500,21 +500,21 @@
             <i class="fas fa-star star"></i>
             <i class="fas fa-star star"></i>
             <i class="fas fa-star star"></i>
-          </div>
+        </div>
           <div class="rating-text">4.8/5 from 127+ reviews</div>
         </div>
-      </div>
+        </div>
       
       <div class="reviews-grid" id="reviewsGrid">
         <!-- Reviews will be loaded here dynamically -->
-      </div>
+        </div>
       
       <div class="load-more-reviews">
         <button class="load-more-btn" id="loadMoreReviews">
           <i class="fas fa-sync-alt"></i>
           Load More Reviews
-        </button>
-      </div>
+          </button>
+        </div>
     </div>
   </section>
 
@@ -594,13 +594,6 @@
   <section class="contact" id="contact">
     <div class="container">
       <h2 class="section-title">Contact Best Astrologer in Rajouri Garden Delhi</h2>
-      <div style="margin-bottom:2rem;">
-        <strong>Phone:</strong> <a href="tel:+919999691464">9999691464</a>, <a href="tel:+919582841454">9582841454</a>, <a href="tel:+919210069061">9210069061</a><br>
-        <strong>Address:</strong> Astrology light for all, Ground Floor, 10/17, Block 10, Subhash Nagar, New Delhi, Delhi, 110027<br>
-        <strong>Email:</strong> <a href="mailto:Astrologylightforall@gmail.com">Astrologylightforall@gmail.com</a><br>
-        <strong>YouTube:</strong> <a href="https://youtube.com/@MANJULGMALHOTRA" target="_blank">youtube.com/@MANJULGMALHOTRA</a><br>
-        <strong>Facebook:</strong> <a href="https://facebook.com/ASTROLOGYLIGHTFORALL" target="_blank">facebook.com/ASTROLOGYLIGHTFORALL</a>
-      </div>
       <form class="contact-form" id="contactForm">
         <div class="form-group">
           <label for="name">Full Name</label>
@@ -635,6 +628,13 @@
           Send Message
         </button>
       </form>
+      <div class="contact-info-block">
+        <div><i class="fas fa-phone-alt"></i> <strong>Phone:</strong> <a href="tel:+919999691464">9999691464</a>, <a href="tel:+919582841454">9582841454</a>, <a href="tel:+919210069061">9210069061</a></div>
+        <div><i class="fas fa-map-marker-alt"></i> <strong>Address:</strong> Astrology light for all, Ground Floor, 10/17, Block 10, Subhash Nagar, New Delhi, Delhi, 110027</div>
+        <div><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:Astrologylightforall@gmail.com">Astrologylightforall@gmail.com</a></div>
+        <div><i class="fab fa-youtube"></i> <strong>YouTube:</strong> <a href="https://youtube.com/@MANJULGMALHOTRA" target="_blank">youtube.com/@MANJULGMALHOTRA</a></div>
+        <div><i class="fab fa-facebook"></i> <strong>Facebook:</strong> <a href="https://facebook.com/ASTROLOGYLIGHTFORALL" target="_blank">facebook.com/ASTROLOGYLIGHTFORALL</a></div>
+      </div>
     </div>
   </section>
 
@@ -735,7 +735,7 @@
             <i class="fas fa-phone"></i>
             Call Now
           </a>
-          <a href="https://wa.me/919999691464" target="_blank" class="popup-btn secondary">
+          <a href="https://wa.me/919953746052" target="_blank" class="popup-btn secondary">
             <i class="fab fa-whatsapp"></i>
             WhatsApp
           </a>
@@ -750,7 +750,7 @@
 
   <!-- Floating Social Bar -->
   <div id="social-bar">
-    <a href="https://wa.me/919999691464" target="_blank" class="social-icon whatsapp" title="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://wa.me/919953746052" target="_blank" class="social-icon whatsapp" title="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
     <a href="https://www.instagram.com/astrologylightforall" target="_blank" class="social-icon instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
     <a href="https://www.facebook.com/ASTROLOGYLIGHTFORALL" target="_blank" class="social-icon facebook" title="Facebook"><i class="fab fa-facebook-f"></i></a>
     <a href="https://youtube.com/@MANJULGMALHOTRA" target="_blank" class="social-icon youtube" title="YouTube"><i class="fab fa-youtube"></i></a>
