--- a/index.html
+++ b/index.html
@@ -1,31 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FR589G8TNW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-FR589G8TNW');
-</script>
-    
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NZCQ9ZJ3');</script>
-<!-- End Google Tag Manager -->
-    
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  
   <!-- Primary Meta Tags -->
   <title>Best Astrologer in Rajouri Garden Delhi | Vedic Astrology Consultation | Astrology light for All</title>
   <meta name="title" content="Best Astrologer in Rajouri Garden Delhi | Vedic Astrology Consultation | Astrology light for All">
-  <meta name="description" content="Expert Vedic astrologer in Rajouri Garden, Delhi. Get accurate horoscope, kundli analysis, marriage compatibility, gemstone consultation. 15+ years experience. Book consultation today!">
+  <meta name="description" content="Vedic astrologer in Rajouri Garden, Delhi. 15+ years experience. Accurate horoscope, kundli, marriage compatibility, gemstone & vastu consultation. Book your session today!">
   <meta name="keywords" content="astrologer delhi, best astrologer rajouri garden, vedic astrology delhi, kundli analysis, marriage compatibility, gemstone consultation, vastu consultation, horoscope delhi, birth chart analysis, astrologer near me">
   <meta name="author" content="Astrology light for All">
   <meta name="robots" content="index, follow">
@@ -71,6 +53,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://astrologylightforall.com/">
+  <link rel="alternate" href="https://astrologylightforall.com/" hreflang="en-IN" />
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -193,7 +176,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     ],
     "sameAs": [
       "https://www.facebook.com/astrologylightforall",
-      "https://www.instagram.com/astrologylightforall",
+      "https://www.instagram.com/astrologylight4all",
       "https://www.youtube.com/channel/astrologylightforall"
     ]
   }
@@ -261,10 +244,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZCQ9ZJ3"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
   <!-- Location Bar -->
   <div class="location-bar">
     <div class="location-content">
@@ -277,7 +256,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <i class="fas fa-directions"></i>
           Get Directions
         </a>
-        <a href="https://share.google/hsemCZviFQmyVevDF" target="_blank" class="btn btn-secondary">
+        <a href="https://maps.app.goo.gl/cARt2gKxRFJLjc1K8" target="_blank" class="btn btn-secondary">
           <i class="fas fa-map"></i>
           View on Maps
         </a>
@@ -287,7 +266,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <!-- Header -->
   <header>
-    <nav class="navbar">
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
       <div class="logo">Astrology light for All</div>
              <ul class="nav-links">
         <li><a href="#home" data-en="Home" data-hi="होम">Home</a></li>
@@ -307,6 +286,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </nav>
   </header>
 
+  <main id="main-content" role="main">
   <!-- Hero Section -->
   <section class="hero" id="home">
     <div class="hero-content">
@@ -320,22 +300,59 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <i class="fas fa-star"></i>
             Check Daily Horoscope
           </a>
-          <a href="#contact" class="btn btn-hero btn-secondary">
+          <a href="#contact" class="btn btn-hero btn-secondary" aria-label="Book Consultation Now">
             <i class="fas fa-phone"></i>
             Book Consultation Now
           </a>
         </div>
       </div>
       <div class="hero-image">
-        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Vedic Astrology Consultation">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Vedic Astrology Consultation in Delhi" loading="lazy">
       </div>
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section class="features" id="services">
+  <!-- Services Section with Service Schema -->
+  <section class="features" id="services" aria-label="Astrology Services">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Astrology Consultation",
+      "provider": {
+        "@type": "LocalBusiness",
+        "name": "Astrology light for All",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "10/17, Block 10, Subhash Nagar, New Delhi, Delhi, 110027",
+          "addressLocality": "Delhi",
+          "addressRegion": "Delhi",
+          "postalCode": "110027",
+          "addressCountry": "IN"
+        },
+        "telephone": "+91-9999691464"
+      },
+      "areaServed": {
+        "@type": "City",
+        "name": "Delhi"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Astrology Services",
+        "itemListElement": [
+          {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Kundli Analysis", "description": "Comprehensive birth chart analysis and guidance."}},
+          {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Marriage Compatibility", "description": "Kundli matching and relationship advice."}},
+          {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Gemstone Consultation", "description": "Personalized gemstone recommendations."}},
+          {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Vastu Consultation", "description": "Professional Vastu Shastra consultation."}},
+          {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Numerology", "description": "Name and number alignment for success."}},
+          {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Lal Kitab Remedies", "description": "Simple, practical remedies for life's challenges."}}
+        ]
+      }
+    }
+    </script>
     <div class="container">
       <h2 class="section-title">Best Astrology Services in Rajouri Garden Delhi</h2>
+      <p style="text-align:center;max-width:600px;margin:0 auto 2rem auto;">For personalized guidance, <a href="#contact">contact us</a> or <a href="#faq">see our FAQ</a>.</p>
       <div class="features-grid">
         <div class="feature-card fade-in">
           <i class="fas fa-heart feature-icon"></i>
@@ -352,7 +369,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             • Understand why arguments happen again and again.<br>
             • See whether it's real love or a passing phase.<br><br>
             This isn't about forcing relationships—it's about clarity, respect, and long-term peace.<br><br>
-            Because true love grows best when it's understood, not just felt.</p>
+            Because true love grows best when it's understood, not just felt.<br><br>
+            <a href="#contact">Book a love compatibility session</a></p>
           </div>
         </div>
         <div class="feature-card fade-in">
@@ -374,7 +392,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             The beauty of astrology is not in fear, but in awareness and timing. Once we know what and why, we can suggest when and how to fix it—whether it's a remedy, a change in approach, or just waiting for the right time.<br><br>
             And just like in medical reports, early awareness means faster healing.<br><br>
             Let us help you see the full picture of your life.<br><br>
-            Because sometimes, all it takes is one small shift in understanding to change everything.</p>
+            <a href="#contact">Book Kundli Analysis</a></p>
         </div>
         </div>
         <div class="feature-card fade-in">
@@ -389,7 +407,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             But here's the truth—wearing the wrong stone is like taking the wrong medicine. That's why we never recommend a gem without reading your chart carefully.<br><br>
             Example?<br><br>
             Someone wearing a Blue Sapphire without needing it might face unnecessary anxiety or obstacles. But for the right person, it can bring immense clarity and financial growth.<br><br>
-            We guide you to the right stone, the right finger, and even the right day and time to wear it—because it's not about trends; it's about transformation.</p>
+            We guide you to the right stone, the right finger, and even the right day and time to wear it—because it's not about trends; it's about transformation.<br><br>
+            <a href="#contact">Get your gemstone recommendation</a></p>
           </div>
         </div>
         <div class="feature-card fade-in">
@@ -407,7 +426,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             • Or avoiding clutter in key corners<br><br>
             can open the door to peace and prosperity.<br><br>
             We treat every home like a living being. Just like your body needs balance, so does your space.<br><br>
-            Let us help your home breathe better, so your life does too.</p>
+            Let us help your home breathe better, so your life does too.<br><br>
+            <a href="#contact">Request Vastu Consultation</a></p>
           </div>
         </div>
         <div class="feature-card fade-in">
@@ -424,7 +444,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             • Kids who started performing better after a name correction.<br>
             • Business owners who turned things around just by adjusting their brand name with numerology.<br><br>
             It's not superstition. It's energy alignment.<br><br>
-            Let's find the name that truly speaks your destiny.</p>
+            Let's find the name that truly speaks your destiny.<br><br>
+            <a href="#contact">Numerology consultation</a></p>
           </div>
         </div>
         <div class="feature-card fade-in">
@@ -442,7 +463,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             Lal Kitab offers simple solutions, like feeding certain animals, placing specific items in your home, or changing daily habits.<br><br>
             No rituals, no fear—just real results when done with the right intent and timing.<br><br>
             We guide you step-by-step so it's easy to follow and aligned with your chart.<br><br>
-            Sometimes, the smallest act brings the biggest shift.</p>
+            Sometimes, the smallest act brings the biggest shift.<br><br>
+            <a href="#contact">Ask for Lal Kitab remedies</a></p>
           </div>
         </div>
       </div>
@@ -573,7 +595,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>At Astrology Light For All, we don't just read charts—we listen, we guide, and we care. Every person we meet has a unique story, and we feel blessed to be able to help them find light and direction on their journey.</p>
         </div>
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?auto=format&fit=crop&w=600&q=80" alt="Vedic Astrology Expert">
+          <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?auto=format&fit=crop&w=600&q=80" alt="Astrology Expert in Rajouri Garden Delhi" loading="lazy">
         </div>
       </div>
     </div>
@@ -616,7 +638,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="contact" id="contact">
     <div class="container">
       <h2 class="section-title">Contact Best Astrologer in Rajouri Garden Delhi</h2>
-      <form class="contact-form" id="contactForm">
+      <form class="contact-form" action="https://formspree.io/f/xpwlqgeo" method="POST">
+        <input type="hidden" name="form-name" value="Contact Form">
         <div class="form-group">
           <label for="name">Full Name</label>
           <input type="text" id="name" name="name" required>
@@ -650,13 +673,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           Send Message
         </button>
       </form>
+      <div id="formSuccessMessage" style="display:none;color:green;font-weight:600;margin-top:1rem;text-align:center;">Thank you! Your message has been sent.</div>
       <div class="contact-info-block">
-        <div><i class="fas fa-phone-alt"></i> <strong>Phone:</strong> <a href="tel:+919999691464">9999691464</a>, <a href="tel:+919582841454">9582841454</a>, <a href="tel:+919210069061">9210069061</a></div>
+        <div class="contact-phones" style="white-space:nowrap;overflow-x:auto;"><i class="fas fa-phone"></i> <strong>Phone:</strong> <a href="tel:+919999691464" target="_blank" rel="noopener noreferrer">9999691464</a>&nbsp;|&nbsp;<a href="tel:+919582841454" target="_blank" rel="noopener noreferrer">9582841454</a>&nbsp;|&nbsp;<a href="tel:+919210069061" target="_blank" rel="noopener noreferrer">9210069061</a></div>
         <div><i class="fas fa-map-marker-alt"></i> <strong>Address:</strong> Astrology light for all, Ground Floor, 10/17, Block 10, Subhash Nagar, New Delhi, Delhi, 110027</div>
-        <div><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:Astrologylightforall@gmail.com">Astrologylightforall@gmail.com</a></div>
-        <div><i class="fab fa-youtube"></i> <strong>YouTube:</strong> <a href="https://youtube.com/@MANJULGMALHOTRA" target="_blank">youtube.com/@MANJULGMALHOTRA</a></div>
-        <div><i class="fab fa-facebook"></i> <strong>Facebook:</strong> <a href="https://facebook.com/ASTROLOGYLIGHTFORALL" target="_blank">facebook.com/ASTROLOGYLIGHTFORALL</a></div>
+        <div><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:Astrologylightforall@gmail.com" target="_blank" rel="noopener noreferrer">Astrologylightforall@gmail.com</a></div>
+        <div><i class="fab fa-instagram"></i> <strong>Instagram:</strong> <a href="https://www.instagram.com/astrologylight4all" target="_blank" rel="noopener noreferrer">instagram.com/astrologylight4all</a></div>
+        <div><i class="fab fa-youtube"></i> <strong>YouTube:</strong> <a href="https://youtube.com/@MANJULGMALHOTRA" target="_blank" rel="noopener noreferrer">youtube.com/@MANJULGMALHOTRA</a></div>
+        <div><i class="fab fa-facebook"></i> <strong>Facebook:</strong> <a href="https://facebook.com/ASTROLOGYLIGHTFORALL" target="_blank" rel="noopener noreferrer">facebook.com/ASTROLOGYLIGHTFORALL</a></div>
       </div>
+    <div class="contact-map-embed" style="margin:2rem 0;text-align:center;">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.78506000318!2d77.11827197520282!3d28.636203383914527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0385dcfc7baf%3A0xe2491c6c5ac385f1!2sAstrology%20light%20for%20all!5e0!3m2!1sen!2sin!4v1753123359556!5m2!1sen!2sin" width="400" height="300" style="border:0;max-width:100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     </div>
   </section>
 
@@ -677,7 +705,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </footer>
 
   <!-- Chatbot Popup -->
-  <div id="chatbot-button" style="position:fixed;bottom:32px;right:32px;z-index:9999;">
+  <div id="chatbot-button" style="position:fixed;bottom:32px;right:32px;z-index:9999;" aria-label="Open AstroBot Chat">
     <button style="background:var(--gradient);color:#fff;border:none;border-radius:50%;width:60px;height:60px;box-shadow:0 4px 16px rgba(0,0,0,0.18);font-size:2rem;cursor:pointer;display:flex;align-items:center;justify-content:center;">
       <i class="fas fa-comments"></i>
     </button>
@@ -771,12 +799,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 
   <!-- Floating Social Bar -->
-  <div id="social-bar">
+  <div id="social-bar" aria-label="Social Media Links">
     <a href="https://wa.me/919953746052" target="_blank" class="social-icon whatsapp" title="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
-    <a href="https://www.instagram.com/astrologylightforall" target="_blank" class="social-icon instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/astrologylight4all" target="_blank" class="social-icon instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
     <a href="https://www.facebook.com/ASTROLOGYLIGHTFORALL" target="_blank" class="social-icon facebook" title="Facebook"><i class="fab fa-facebook-f"></i></a>
     <a href="https://youtube.com/@MANJULGMALHOTRA" target="_blank" class="social-icon youtube" title="YouTube"><i class="fab fa-youtube"></i></a>
-    <a href="tel:+919999691464" class="social-icon call" title="Call Now"><i class="fas fa-phone-alt"></i></a>
+    <a href="tel:+919999691464" class="social-icon call" title="Call Now"><i class="fas fa-phone"></i></a>
   </div>
 
   <!-- YouTube Video Gallery -->
@@ -845,7 +873,41 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </style>
 
   <!-- Move script.js here for proper DOM loading -->
-  <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" defer></script>
+  <script src="script.js" defer></script>
+  <!-- Breadcrumb Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://astrologylightforall.com/"},
+      {"@type": "ListItem", "position": 2, "name": "Services", "item": "https://astrologylightforall.com/#services"},
+      {"@type": "ListItem", "position": 3, "name": "Contact", "item": "https://astrologylightforall.com/#contact"}
+    ]
+  }
+  </script>
+  <!-- Add Review Schema for testimonials -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Review",
+    "itemReviewed": {
+      "@type": "LocalBusiness",
+      "name": "Astrology light for All"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Priya Sharma"
+    },
+    "reviewRating": {
+      "@type": "Rating",
+      "ratingValue": "5",
+      "bestRating": "5"
+    },
+    "reviewBody": "The kundli analysis was incredibly accurate! Astrology light for All helped me understand my life path better."
+  }
+  </script>
 </body>
 </html>
 
