--- a/index.html
+++ b/index.html
@@ -467,6 +467,18 @@
             <a href="#contact">Ask for Lal Kitab remedies</a></p>
           </div>
         </div>
+        <div class="feature-card fade-in">
+          <i class="fas fa-hand-paper feature-icon"></i>
+          <h3>Palm Reading</h3>
+          <p>Discover what your palm lines reveal about your destiny, health, career, and relationships. Get a personalized palm reading session.</p>
+          <button class="learn-more-btn">Learn More</button>
+          <div class="service-full-detail" style="display:none;">
+            <p>Your hands are a map of your life. Palmistry (hast rekha) can reveal hidden strengths, challenges, and opportunities.<br><br>
+            We analyze your major and minor lines, mounts, and shapes to provide insights about your personality, health, career, love life, and more.<br><br>
+            Curious what your palm says about your future?<br><br>
+            <a href="#contact">Book a palm reading session</a></p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
