--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
   <section class="contact" id="contact">
     <div class="container">
       <h2 class="section-title">Contact Best Astrologer in Rajouri Garden Delhi</h2>
-      <form class="contact-form" action="https://formspree.io/f/xpwlqgeo" method="POST">
+      <form class="contact-form" action="https://formspree.io/f/mgvzogaz" method="POST">
         <input type="hidden" name="form-name" value="Contact Form">
         <div class="form-group">
           <label for="name">Full Name</label>
