--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
   <link rel="alternate" href="https://astrologylightforall.com/" hreflang="en-IN" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="Logo.png" sizes="32x32" />
   
   <!-- Preconnect to external domains -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -268,7 +265,7 @@
   <header>
     <nav class="navbar" role="navigation" aria-label="Main Navigation">
       <div class="logo">Astrology light for All</div>
-             <ul class="nav-links">
+       <ul class="nav-links">
         <li><a href="#home" data-en="Home" data-hi="होम">Home</a></li>
         <li><a href="#services" data-en="Services" data-hi="सेवाएं">Services</a></li>
         <li><a href="#horoscope" data-en="Horoscope" data-hi="राशिफल">Horoscope</a></li>
@@ -276,6 +273,7 @@
         <li><a href="#about" data-en="About" data-hi="हमारे बारे में">About</a></li>
         <li><a href="#faq" data-en="FAQ" data-hi="सामान्य प्रश्न">FAQ</a></li>
         <li><a href="#contact" data-en="Contact" data-hi="संपर्क">Contact</a></li>
+        <li><a href="blog/index.html" data-en="Blog" data-hi="ब्लॉग">Blog</a></li>
        </ul>
       <div class="language-switch">
         <button id="languageToggle" class="btn btn-primary">
@@ -303,6 +301,10 @@
           <a href="#contact" class="btn btn-hero btn-secondary" aria-label="Book Consultation Now">
             <i class="fas fa-phone"></i>
             Book Consultation Now
+          </a>
+          <a href="blog/index.html" class="btn btn-hero btn-secondary" aria-label="Visit our Blog">
+            <i class="fas fa-blog"></i>
+            Read Our Blog
           </a>
         </div>
       </div>
@@ -650,7 +652,7 @@
   <section class="contact" id="contact">
     <div class="container">
       <h2 class="section-title">Contact Best Astrologer in Rajouri Garden Delhi</h2>
-      <form class="contact-form" action="https://formspree.io/f/mgvzogaz" method="POST">
+      <form class="contact-form" action="https://formspree.io/f/xpwlqgeo" method="POST">
         <input type="hidden" name="form-name" value="Contact Form">
         <div class="form-group">
           <label for="name">Full Name</label>
